Update HTML index, CSS and JS

--- a/index.html
+++ b/index.html
@@ -10,29 +10,36 @@
 </head>
 
 <body>
-    <!--Primera carta-->
-    <div class="pares">
-        <button type="button" class="tap" id="btntap"></button>
-    </div>
+    <div class="cartas">
+        <!--Primera carta-->
+        <div class="pares">
+            <button type="button" class="tap" id="btntap"></button>
+        </div>
 
-    <!--Segunda carta-->
-    <div class="pares">
-        <button type="button" class="tap2" id="btntap2"></button>
-    </div>
+        <!--Segunda carta-->
+        <div class="pares">
+            <button type="button" class="tap2" id="btntap2"></button>
+        </div>
 
-    <!--Tercera carta-->
-    <div class="pares">
-        <button type="button" class="tap3" id="btntap3"></button>
-    </div>
+        <!--Tercera carta-->
+        <div class="pares">
+            <button type="button" class="tap3" id="btntap3"></button>
+        </div>
 
-    <!--Cuarta carta-->
-    <div class="pares">
-        <button type="button" class="tap4" id="btntap4"></button>
-    </div>
+        <!--Cuarta carta-->
+        <div class="pares">
+            <button type="button" class="tap4" id="btntap4"></button>
+        </div>
 
-    <!--Quinta carta-->
-    <div class="pares">
-        <button type="button" class="tap5" id="btntap5"></button>
+        <!--Quinta carta-->
+        <div class="pares">
+            <button type="button" class="tap5" id="btntap5"></button>
+        </div>
+
+        <!--Sexta carta-->
+        <div class="pares">
+            <button type="button" class="tap6" id="btntap6"></button>
+        </div>
     </div>
 
     <!--Limpiar elementos flotados-->
@@ -40,43 +47,53 @@
 
     <!--Ventanas emergentes-->
 
-    <!--Ventana emergente 1-->
-    <div class="overlay" id="overlay">
-        <div class="popup" id="popup">
-            <a href="#" id="btncerrar" class="btncerrar">x</a>
-            <img src=".//Img_carta blanca.png" alt="carta1">
+    <div class="ventanas">
+        <!--Ventana emergente 1-->
+        <div class="overlay" id="overlay">
+            <div class="popup" id="popup">
+                <a href="#" id="btncerrar" class="btncerrar">x</a>
+                <img src=".//Img_carta blanca.png" alt="carta1">
+            </div>
         </div>
-    </div>
 
-    <!--Ventana emergente 2-->
-    <div class="overlay2" id="overlay2">
-        <div class="popup2" id="popup2">
-            <a href="#" id="btncerrar2" class="btncerrar2">x</a>
-            <img src=".//Img_carta blanca.png" alt="carta2">
+        <!--Ventana emergente 2-->
+        <div class="overlay2" id="overlay2">
+            <div class="popup2" id="popup2">
+                <a href="#" id="btncerrar2" class="btncerrar2">x</a>
+                <img src=".//Img_carta blanca.png" alt="carta2">
+            </div>
         </div>
-    </div>
 
-    <!--Ventana emergente 3-->
-    <div class="overlay3" id="overlay3">
-        <div class="popup3" id="popup3">
-            <a href="#" id="btncerrar3" class="btncerrar3">x</a>
-            <img src=".//Img_carta blanca.png" alt="carta2">
+        <!--Ventana emergente 3-->
+        <div class="overlay3" id="overlay3">
+            <div class="popup3" id="popup3">
+                <a href="#" id="btncerrar3" class="btncerrar3">x</a>
+                <img src=".//Img_carta blanca.png" alt="carta2">
+            </div>
         </div>
-    </div>
 
-    <!--Ventana emergente 4-->
-    <div class="overlay4" id="overlay4">
-        <div class="popup4" id="popup4">
-            <a href="#" id="btncerrar4" class="btncerrar4">x</a>
-            <img src=".//Img_carta blanca.png" alt="carta4">
+        <!--Ventana emergente 4-->
+        <div class="overlay4" id="overlay4">
+            <div class="popup4" id="popup4">
+                <a href="#" id="btncerrar4" class="btncerrar4">x</a>
+                <img src=".//Img_carta blanca.png" alt="carta4">
+            </div>
         </div>
-    </div>
 
-    <!--Ventana emergente 5-->
-    <div class="overlay5" id="overlay5">
-        <div class="popup5" id="popup5">
-            <a href="#" id="btncerrar5" class="btncerrar5">x</a>
-            <img src=".//Img_carta blanca.png" alt="carta5">
+        <!--Ventana emergente 5-->
+        <div class="overlay5" id="overlay5">
+            <div class="popup5" id="popup5">
+                <a href="#" id="btncerrar5" class="btncerrar5">x</a>
+                <img src=".//Img_carta blanca.png" alt="carta5">
+            </div>
+        </div>
+
+        <!--Ventana emergente 6-->
+        <div class="overlay6" id="overlay6">
+            <div class="popup6" id="popup6">
+                <a href="#" id="btncerrar6" class="btncerrar6">x</a>
+                <img src=".//Img_carta blanca.png" alt="carta6">
+            </div>
         </div>
     </div>
 
