Update HTML and CSS

--- a/index.html
+++ b/index.html
@@ -53,6 +53,17 @@
             <div class="popup" id="popup">
                 <a href="#" id="btncerrar" class="btncerrar">x</a>
                 <img src=".//Img_carta blanca.png" alt="carta1">
+                <div class="text">
+                    <p>Adrián es una persona muy comprometida con su trabajo, considera que ser proactivo favorece a su
+                        desarrollo profesional, así que tiende a ser de los primeros en alcanzar sus metas, si ve una
+                        oportunidad de participar en nuevas actividades pide que lo incluyan, siempre da lo mejor de sí
+                        mismo, y además le gusta apoyar a sus compañeros cuando percibe que requieren ayuda. Su superior se
+                        ha dado cuenta del alto sentido de responsabilidad de Adrián, así que decide delegarle nuevas
+                        funciones. Al paso del tiempo se da cuenta que ahora se encuentra con muchos proyectos andando y se
+                        le siguen sumando más cosas por hacer, solo que no sabe como decir que no, pues le apena mucho que
+                        piensen que no quiere colaborar, ¿Cuál puede ser una buena estrategia para poner límites sanos antes
+                        tantas solicitudes?</p>
+                </div>
             </div>
         </div>
 
@@ -61,6 +72,18 @@
             <div class="popup2" id="popup2">
                 <a href="#" id="btncerrar2" class="btncerrar2">x</a>
                 <img src=".//Img_carta blanca.png" alt="carta2">
+                <div class="text">
+                    <p>Blanca lleva dos años trabajando para un organización en donde puede poner en práctica todos sus
+                        conocimientos y habilidades en su puesto de trabajo, realmente le gusta mucho lo que hace, incluso
+                        llega antes para poder avanzar sus pendientes y se siente más cómoda en el silencio cuando todos se
+                        van, pues piensa que sus compañeros la distraen, en ocasiones lleva el trabajo a casa y aprovecha
+                        los fines de semana para sacar adelante todos los proyectos. Un par de veces al estar dormida se le
+                        han ocurrido ideas muy buenas, por lo que se despierta a tomar notas para no olvidarlas. En casa su
+                        ausencia comienza a ser notoria, sus amigos le dicen que hace tiempo no sale con ellos y pocas veces
+                        se da tiempo para ella misma. Aunque le gustaría mejorar su lazo familiar, convivir más con sus
+                        amigos y tener actividades que la revitalicen, solo se abruma porque que no sabe cómo hacerlo. ¿Qué
+                        le recomdarías?</p>
+                </div>
             </div>
         </div>
 
@@ -69,6 +92,15 @@
             <div class="popup3" id="popup3">
                 <a href="#" id="btncerrar3" class="btncerrar3">x</a>
                 <img src=".//Img_carta blanca.png" alt="carta2">
+                <div class="text">
+                    <p>Rodrigo es una persona que tiene claras sus actividades laborales, no tiene problema con las
+                        instrucciones que recibe, sin embargo siente que algo le falta, pues desde que decidió estudiar su
+                        licenciatura se imaginó un panorama laboral estimulante, con retos continuos, recompensas
+                        equitativas y una buena relación con sus compañeros de trabajo y sus superiores, pero descubre que
+                        su estancia en el trabajo no le genera ninguna emoción positiva, solo está ahí realizando lo que le
+                        encomiendan y al día siguiente reinicia la rutina. ¿Qué podría hacer Rodrigo para lograr cubrir sus
+                        expectativas?</p>
+                </div>
             </div>
         </div>
 
@@ -77,6 +109,13 @@
             <div class="popup4" id="popup4">
                 <a href="#" id="btncerrar4" class="btncerrar4">x</a>
                 <img src=".//Img_carta blanca.png" alt="carta4">
+                <div class="text">
+                    <p>Minerva es una persona con grandes ambiciones y su plan a largo plazo es poder crecer dentro de la
+                        organización en la que trabaja, pues es una institución de renombre, solo que en ocasiones siente
+                        que sus actividades no son desafiantes, considera que sabe más de lo que hace, incluso ha pensado
+                        que no están aprovechando sus talentos como deberían. Reconoció estár en un dilema, ya que le gusta
+                        trabajar ahí pero siente que no está aprendiendo cosas nuevas, ¿Cómo podrá resolver esta situación?</p>
+                </div>
             </div>
         </div>
 
@@ -85,6 +124,17 @@
             <div class="popup5" id="popup5">
                 <a href="#" id="btncerrar5" class="btncerrar5">x</a>
                 <img src=".//Img_carta blanca.png" alt="carta5">
+                <div class="text">
+                    <p>Santiago estuvo reflexionando respecto a su situación actual en el trabajo, y se dio cuenta que las
+                        actividades que realiza son muy similares todos los días, suele sentise obligado cuando su jefa le
+                        asigna más pendientes, su compromiso ha ida bajando al paso del tiempo, últimamente voltea muy
+                        seguido al reloj a ver si ya casi es hora de salir, imaginar que se acerca el fin de la jornada
+                        laboral le hace sentir un poco mejor, pero eso no siempre funciona. Ha llegado a la conlusión de que
+                        perdio el entusiasmo por su trabajo, le gustaría dejar todo atrás, pero no puede perder su empleo
+                        porque tiene que pagar el préstamo del auto que sacó hace un año de la agencia y recientemente
+                        activó su crédito del INFONAVIT. ¿Qué podría ayudarle a sentirse motivado de nuevo sin tener que
+                        renunciar?</p>
+                </div>
             </div>
         </div>
 
@@ -93,6 +143,16 @@
             <div class="popup6" id="popup6">
                 <a href="#" id="btncerrar6" class="btncerrar6">x</a>
                 <img src=".//Img_carta blanca.png" alt="carta6">
+                <div class="text">
+                    <p>A Cristina le gustaría poder tener una relación más fraterna con sus compañeros, pues sabe que su
+                        lugar de trabajo es reconocido por un buen ambiente laboral, pero cuando lo quiere intentar está
+                        demasiado fatigada, pues sus actividades implican un desgaste mental importante y debe mantener un
+                        pensamiento creativo que le permita resolver las situaciones que se van presentado día tras día. Lo
+                        común en una jornada es pasar muchas horas frente a una computadora en donde la demanda mental la
+                        sobre pasa, al punto de experimentar fatiga. Tiene muchos deseos de tener una nueva rutina pero no
+                        sabe por donde empezar, pues se siente muy cansada. ¿Qué plan factible podría implementar dentro y
+                        fuera del trabajo?</p>
+                </div>
             </div>
         </div>
     </div>
